@@ -1,6 +1,7 @@
 Version X.XX (developement version)
 ------------
 * Improve gamify.conf.sample documentation and help
+* [BUG-#5] 'Is possible to answer secret questions twice'
 
 Version 2.9
 -----------
